--- a/BlazorApp_Forms/BlazorApp_Forms/Pages/Formulario.razor
+++ b/BlazorApp_Forms/BlazorApp_Forms/Pages/Formulario.razor
@@ -3,16 +3,21 @@
 <h1> Meu primeiro formulário Blazor </h1>
 
 
-<EditForm Model="@usuario" OnSubmit="@Submeter">
+<EditForm Model="@usuario">
+    <DataAnnotationsValidator />
 
-    <label form="nome">Nome </label>
-    <InputText id="nome" @bind-Value="usuario.Nome" />
-    <br />
-    <label form="email">Email </label>
-    <InputText id="email" @bind-Value="usuario.Email" />
-    <br />
-    <label form="idade">Idade </label>
-    <InputNumber id="idade" @bind-Value="usuario.Idade" />
+    <div class="form-group">
+        <label form="nome">Nome </label>
+        <InputText id="nome" @bind-Value="usuario.Nome" class="form-control"/>
+    </div>
+    <div class="form-group">
+        <label form="email">Email </label>
+        <InputText id="email" @bind-Value="usuario.Email" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label form="idade">Idade </label>
+        <InputNumber id="idade" @bind-Value="usuario.Idade" class="form-control" />
+    </div>
     <br />
     <input type="submit" value="Enviar Formulário" class="btn-primary" />
 
@@ -21,9 +26,9 @@
 @code {
     Usuario usuario = new Usuario();
 
-    private void Submeter()
-    {
-        Console.WriteLine($"Submit:{usuario.Nome} - {usuario.Email} - {usuario.Idade} ");
-    }
+    //private void Submeter()
+    //{
+    //    Console.WriteLine($"Submit:{usuario.Nome} - {usuario.Email} - {usuario.Idade} ");
+    //}
 
 }
