--- a/BlazorApp_Forms/BlazorApp_Forms/Pages/Formulario.razor
+++ b/BlazorApp_Forms/BlazorApp_Forms/Pages/Formulario.razor
@@ -5,6 +5,7 @@
 
 <EditForm Model="@usuario">
     <DataAnnotationsValidator />
+    <ValidationSummary/>
 
     <div class="form-group">
         <label form="nome">Nome </label>
