--- a/BlazorApp_Forms/BlazorApp_Forms/Pages/Formulario.razor
+++ b/BlazorApp_Forms/BlazorApp_Forms/Pages/Formulario.razor
@@ -10,14 +10,17 @@
     <div class="form-group">
         <label form="nome">Nome </label>
         <InputText id="nome" @bind-Value="usuario.Nome" class="form-control"/>
+        <ValidationMessage For="()=> usuario.Nome"/>
     </div>
     <div class="form-group">
         <label form="email">Email </label>
         <InputText id="email" @bind-Value="usuario.Email" class="form-control" />
+        <ValidationMessage For="@(()=> usuario.Email)" />
     </div>
     <div class="form-group">
         <label form="idade">Idade </label>
         <InputNumber id="idade" @bind-Value="usuario.Idade" class="form-control" />
+         <ValidationMessage For="()=> usuario.Idade"/>
     </div>
     <br />
     <input type="submit" value="Enviar Formulário" class="btn-primary" />
