--- a/BlazorApp_Forms/BlazorApp_Forms/Pages/Formulario.razor
+++ b/BlazorApp_Forms/BlazorApp_Forms/Pages/Formulario.razor
@@ -10,7 +10,7 @@
 }
 
 
-<EditForm Model="@usuario" OnValidSubmit="@FormularioValidoSubmetido" OnInvalidSubmit="@FormularioInvalidoSubmetido">
+<EditForm Model="@usuario" OnSubmit="@onSubmitForm">
     <DataAnnotationsValidator />
     <ValidationSummary/>
 
@@ -51,5 +51,10 @@
         $"O formulário é válido = {editContext.Validate()}";
     }
 
+    void onSubmitForm(EditContext editContext)
+    {
+        bool formIsValid = editContext.Validate();
+        ultimoSubmit = formIsValid ? "Sucesso - formulário válido" : "Falhou - formulário inválido";
+    }
 
 }
